# safaia-framework

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  main-test.cpp  main.cpp  travis-before.sh  travis.sh
doc/: tutorial.md
framework/: Ecp.h  Log.h  Request.h  Response.h  Route.h  Safaia.cpp  Safaia.h  UnitTest.h
framework/safaia/: Ecp.h  Log.h  Request.h  Response.h  Route.h  Safaia.h  UnitTest.h
tests/: main.cpp
views/: index.ecp  request_url.html
